--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </div>
     <div class="mid">
         <div >
-            <img class="pic" src="yogi.JPG" alt="Yogendra">
+            <img class="pic" src="ykd.JPG" alt="Yogendra">
             <h2>Hello</h2>
             <p class="pa">Software Engineering with excellent problem-solving skills and ability to perform well in a
                 team.
